// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/kingdom/model_rollout.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for persistence of ModelRollout entities.
service ModelRollouts {
  rpc CreateModelRollout(ModelRollout) returns (ModelRollout);

  // Streams `ModelRollout`s.
  rpc StreamModelRollouts(StreamModelRolloutsRequest)
      returns (stream ModelRollout);

  rpc ScheduleModelRolloutFreeze(ScheduleModelRolloutFreezeRequest)
      returns (ModelRollout);
  // Deletes a `ModelRollout`.
  rpc DeleteModelRollout(DeleteModelRolloutRequest) returns (ModelRollout);
}

message StreamModelRolloutsRequest {
  message AfterFilter {
    fixed64 external_model_provider_id = 1;
    fixed64 external_model_suite_id = 2;
    fixed64 external_model_line_id = 3;
    fixed64 external_model_rollout_id = 4;
    google.protobuf.Timestamp rollout_period_start_time = 5;
  }
  message RolloutPeriod {
    // Inclusive time.
    google.protobuf.Timestamp rollout_period_start_time = 1;
    // Exclusive time.
    google.protobuf.Timestamp rollout_period_end_time = 2;
  }

  // Filter criteria as a conjunction of specified fields.
  message Filter {
    int64 external_model_provider_id = 1;
    int64 external_model_suite_id = 2;
    int64 external_model_line_id = 3;
    RolloutPeriod rollout_period = 4;
    AfterFilter after = 5;
  }
  Filter filter = 1;

  // The maximum number of results to return. If not specified or 0, it implies
  // unlimited.
  int32 limit = 2;
}

message ScheduleModelRolloutFreezeRequest {
  fixed64 external_model_provider_id = 1;
  fixed64 external_model_suite_id = 2;
  fixed64 external_model_line_id = 3;
  fixed64 external_model_rollout_id = 4;
  google.protobuf.Timestamp rollout_freeze_time = 5;
}

message DeleteModelRolloutRequest {
  fixed64 external_model_provider_id = 1;
  fixed64 external_model_suite_id = 2;
  fixed64 external_model_line_id = 3;
  fixed64 external_model_rollout_id = 4;
}
